# konkani-vaani-asr

./: .gitignore  LICENSE  MIGRATION_GUIDE.md  README.md  pyproject.toml  requirements.txt  setup.py
config/: __init__.py  model_config.py  model_config.yaml  paths.py  training_config.py  training_config_from_checkpoint15.yaml
data/: README.md  ner_labeled_data_label_map.json  requirements.txt  transcripts_konkani_cleaned.json  transcripts_konkani_cleaned_report.txt  transcripts_konkani_full.json  vocab.json
data/audio/: audio_manifest.csv
data/audio_processing/: dataset.py
docs/: ASR_TRAINING_IMPROVEMENTS.md  CHECKPOINT15_RESUME_GUIDE.md  COLAB_SETUP_GUIDE.md  DRIVE_SETUP_INSTRUCTIONS.md  DUAL_GPU_SUMMARY.md  KAGGLE_FAST_UPLOAD.md  KAGGLE_UPLOAD_GUIDE.md  KAGGLE_UPLOAD_SUMMARY.md  KAGGLE_VS_COLAB_GUIDE.md  MEMORY_OPTIMIZATION_GUIDE.md  MODEL_COMPARISON.md  NER_SETUP_COMPLETE.md  NER_USAGE_GUIDE.md  PARALLEL_TRAINING_GUIDE.md  README_CUSTOM_MODEL.md  README_TRAINING.md  READY_TO_TRAIN.md  UNIFIED_PIPELINE_GUIDE.md  UPLOAD_TO_COLAB_GUIDE.md  VALIDATION_FINAL_REPORT.md  architecture.md  konkani_nlp_guide.md
documentation/: ASR_QUICK_SETUP.md  ASR_SETUP_ACCOUNT_B.md  ASR_SETUP_SHARED_FOLDER.md  COLAB_SETUP_GUIDE.md  COMPLETE_TRAINING_GUIDE.md  GOOGLE_ONE_SETUP_GUIDE.md  KONKANIVANI_README.md  NER_SOLUTION.md  NER_TRAINING_GUIDE.md  PROJECT_STATUS.md  QUICK_START.md  QUICK_START_NER.md  README.md  SIMPLE_FIX_CELL2.md
konkani/: __init__.py
konkani/core/: __init__.py  dataset.py  metrics.py  tokenizer.py
konkani/data/: __init__.py  audio_processing.py  augmentation.py  preprocessing.py
konkani/utils/: io.py  (+3 more)
models/: konkani_ner.py  konkani_translator.py  konkanivani_asr.py
notebooks/: FINAL_COLAB_TRAINING.ipynb  GENERATE_EMOTION_DATA.ipynb  GENERATE_TRANSLATION_DATA.ipynb  KAGGLE_DUAL_GPU_PIPELINE.ipynb  KAGGLE_EMOTION_CUSTOM.ipynb  KAGGLE_EMOTION_TRAINING.ipynb  KAGGLE_TRAINING.ipynb  KAGGLE_TRAINING_OPTIMIZED.ipynb  KAGGLE_TRANSLATION_TRAINING.ipynb  train_asr_shared_folder.ipynb  train_colab_simple.ipynb  train_emotion_detection_colab.ipynb  train_from_drive.ipynb  train_konkanivani_colab.ipynb  train_konkanivani_google_one.ipynb  train_ner_colab.ipynb
scripts/: asr_with_ner.py  auto_label_ner.py  auto_translate.py  create_complete_kaggle_dataset.sh  create_kaggle_minimal.sh  create_kaggle_minimal_fixed.sh  create_kaggle_package_final.sh  create_translation_notebook.py  demo_ner.py  resume_training_from_checkpoint15.sh  run_training_memory_optimized.sh  test_ner_model.py
training_scripts/: evaluate_konkanivani.py  train_konkani_ner.py
utilities/: create_colab_package.sh  fix_manifest_paths.py  prepare_ner_upload.sh  test_ner_setup.py  train_ner_pipeline.sh  upload_to_colab.sh
(+39 files in other folders)
